testdata/zkc/invalid/type_invalid_01.zkc
;;error:2:1-5:cyclic definition
type bool = bool